[package]
name = "power-supply"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
embassy-stm32 = { version = "0.1.0", features = [
  "defmt",
  "rt",
  "memory-x",
  "stm32f030k6",
  "time-driver-any",
  "exti",
  "unstable-pac",
] }
cortex-m = { version = "0.7.6", features = [
  "inline-asm",
  "critical-section-single-core",
] }
cortex-m-rt = "0.7.0"
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = "0.3"
embassy-sync = { version = "0.5.0", features = ["defmt"] }
embassy-executor = { version = "0.5.0", features = [
  "arch-cortex-m",
  "executor-thread",
  "executor-interrupt",
  "defmt",
  "integrated-timers",
] }
embassy-time = { version = "0.3.0", features = [
  "defmt",
  "defmt-timestamp-uptime",
  "tick-hz-32_768",
] }
static_cell = "2"
portable-atomic = { version = "1.5", features = ["unsafe-assume-single-core"] }


[profile.release]
debug = 2
